sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:8: error: illegal start of simple expression
var p=(getValueCount()-3-j)
^